...
                        _uiEvents.emit(FinanceUiEvent.ShowToast(application.appString(R.string.feedback_error, e.localizedMessage ?: e.javaClass.simpleName)))
                    }
                }
                is FinanceIntent.DeleteTransaction -> {
                    try {
                        transactionRepository.deleteTransaction(intent.tx)
                        _uiEvents.emit(FinanceUiEvent.ShowSnackbar("Transaction deleted", "Undo", FinanceIntent.RestoreTransaction(intent.tx)))
                    } catch (e: Exception) {
                        _uiEvents.emit(FinanceUiEvent.ShowToast(application.appString(R.string.feedback_error, e.localizedMessage ?: e.javaClass.simpleName)))
                    }
                }
                is FinanceIntent.RestoreTransaction -> {
                    try {
...
